--- a/WebVR/manifest.json
+++ b/WebVR/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Car Simulator VR",
-    "start_url": "/index.html",
+    "start_url": "./index.html",
     "display": "standalone",
     "orientation": "landscape"
 }
