--- a/WebVR/manifest.json
+++ b/WebVR/manifest.json
@@ -7,7 +7,7 @@
         "sizes": "128x128"
     }],
     "start_url": "./index.html",
-    "background_color": "#2bbbad",
+    "background_color": "#ffffff",
     "theme_color": "#26a69a",
     "display": "standalone",
     "orientation": "landscape"
